<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest01Var04</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_do_">Do\'</string>
    <string name="button_sol">Sol</string>
    <string name="button_mi">Mi</string>
    <string name="button_do">Do</string>
    <string name="action_settings">Settings</string>
    <string name="sequence">do mi sol do\'</string>
    <string name="navigate_to_secondary_activity">Navigate to secondary activity</string>
    <string name="title_activity_practical_test01_var04_secondary">PracticalTest01Var04SecondaryActivity</string>

</resources>
