<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.pdsd.practicaltest01var04.PracticalTest01Var04MainActivity"
    tools:ignore="MergeRootFrame" >
    <EditText
        android:id="@+id/sequence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="left"
        android:hint="@string/sequence" />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:rowCount="4"
        android:columnCount="4" >
        
         <Button
            android:id="@+id/button_do_"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/button_do_" />
         <Button
            android:id="@+id/button_sol"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/button_sol" />
         <Button
            android:id="@+id/button_mi"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/button_mi" />
         <Button
            android:id="@+id/button_do"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/button_do" />
    </GridLayout>
    <Button
        android:id="@+id/navigate_to_secondary_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"       
        android:text="@string/navigate_to_secondary_activity" />
</LinearLayout>
